added join room input

--- a/src/client/locales/en/translation.json
+++ b/src/client/locales/en/translation.json
@@ -3,6 +3,7 @@
   "main": {
     "startGame": "New game",
     "joinRoom": "Join room",
+    "joinRoomPlaceholder": "Enter room name",
     "leaderboard": "Leaderboard"
   }
 }
