added modal for username

--- a/src/client/locales/en/translation.json
+++ b/src/client/locales/en/translation.json
@@ -4,6 +4,7 @@
     "startGame": "New game",
     "joinRoom": "Join room",
     "joinRoomPlaceholder": "Enter room name",
-    "leaderboard": "Leaderboard"
+    "leaderboard": "Leaderboard",
+    "enterUsername": "Please enter your username"
   }
 }
