--- a/src/client/locales/ru/translation.json
+++ b/src/client/locales/ru/translation.json
@@ -4,6 +4,7 @@
     "startGame": "Начать игру",
     "joinRoom": "Войти в комнату",
     "joinRoomPlaceholder": "Введите имя комнаты",
-    "leaderboard": "Топ игроков"
+    "leaderboard": "Топ игроков",
+    "enterUsername": "Введите никнейм"
   }
 }
