--- a/src/client/locales/en/translation.json
+++ b/src/client/locales/en/translation.json
@@ -6,6 +6,20 @@
     "joinRoomPlaceholder": "Enter room name",
     "leaderboard": "Leaderboard",
     "enterUsername": "Please enter your username",
-    "usernameHint": "Only a-z, A-Z, 0-9 symbols allowed"
+    "usernameHint": "Only a-z, A-Z, 0-9 symbols allowed",
+    "gamePage": {
+      "room": "Room",
+      "players": "Players:",
+      "score": "Score:",
+      "level": "Level:",
+      "nextFigure": "Next figure:",
+      "rotateFigure": "Rotate figure:",
+      "moveFigure": "Move figure:",
+      "modal": {
+        "startGame": "Start game",
+        "gameOptions": "Game options",
+        "speed": "Speed"
+      }
+    }
   }
 }
