--- a/src/client/locales/ru/translation.json
+++ b/src/client/locales/ru/translation.json
@@ -15,6 +15,7 @@
       "nextFigure": "Следующая фигура:",
       "rotateFigure": "Поворот фигуры:",
       "moveFigure": "Движения:",
+      "roomError": "Комната заполнена. Максимальное количество игроков в одной комнате - 4.",
       "modal": {
         "startGame": "Начать игру",
         "gameOptions": "Настройки",
