--- a/src/client/locales/ru/translation.json
+++ b/src/client/locales/ru/translation.json
@@ -14,6 +14,7 @@
       "level": "Уровень:",
       "nextFigure": "Следующая фигура:",
       "rotateFigure": "Поворот фигуры:",
+      "dropFigure": "Опустить фигуру:",
       "moveFigure": "Движения:",
       "roomError": "Комната заполнена. Максимальное количество игроков в одной комнате - 4.",
       "modal": {
