--- a/src/client/locales/ru/translation.json
+++ b/src/client/locales/ru/translation.json
@@ -20,7 +20,11 @@
       "modal": {
         "startGame": "Начать игру",
         "gameOptions": "Настройки",
-        "speed": "Скорость"
+        "speed": "Скорость",
+        "endGameTitle": "Игра закончена",
+        "endGameButton": "В меню",
+        "endGameTextPt1": "Поздравляем! Ваш результат ",
+        "endGameTextPt2": ". Ваши результаты будут видны в таблице лидеров если ваши очки достаточно велики. Вы можете вернуться в меню и начать новую игру!"
       }
     }
   }
